# Cover-Clarity

./: .env.example  .gitignore  README.md  pyproject.toml
app/: cognee_utils.py  db_utils.py  main.py  requirements.txt  supabase_query.sql
app/static/: app.js  index.html  style.css
data-collection/: parser.py  prunner.py
data-collection/processed/: bronze-ppo.md
data-collection/processed/diagnostic/: Caries Detection Techniques (028) - Dental CPBs _ Aetna.md  Dental radiographic examinations policy (048) - Dental CPBs _ Aetna.md  Diagnostic Tools and_or Devices Policy (044) - Dental CPBs _ Aetna.md  Oral Cancer Screening Adjuncts Policy (045) - Dental CPBs _ Aetna.md
data-collection/processed/oral_surgery/: Alveoloplasty - Surgical Preparation of Ridge in Preparation for a Prosthesis (010).md  Bone Graft Policy (001).md  Brush Biopsy - Transepithelial Sample Collection (006).md  Criteria for the removal of impacted teeth (015) - Dental CPBs _ Aetna.md  Frenulectomy (frenectomy, frenotomy) or frenuloplasty (011) - Dental CPBs _ Aetna.md  Immediate surgical placement of implant body with soft tissue grafting, osseous grafting and guided tissue regeneration (009) _ Aetna.md  Infiltration of sustained release therapeutic drug policy (047) - Dental CPBs _ Aetna.md  (+1 more)
data-collection/processed_new/: bronze-ppo.md
graph/: dental_graph.html  evaluate_graph.py  local_pipeline.py  query_graph.py  schema.py  visualize.py
graph/cloud/: build_graph.py  executables.py  schema.py
graph/local/: build_graph.py  chat_demo.py  evaluate_graph.py  executables.py
(+101 files in other folders)
