[project]
name = "claimclarity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cognee[groq]>=1.2.2",
    "kuzu>=0.11.3",
    "docling>=2.107.0",
    "dotenv>=0.9.9",
    "fastapi>=0.138.2",
    "httpx>=0.28.1",
    "markdown>=3.10.2",
    "pdfplumber>=0.11.10",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "reportlab>=5.0.0",
    "supabase>=2.31.0",
    "uvicorn>=0.49.0",
]
[dependency-groups]
app = [
  "fastapi",
  "uvicorn[standard]",
  "python-jose[cryptography]",
  "bcrypt",
  "pydantic",
  "python-dotenv",
  "supabase",
  "cognee",
  "httpx",
  "reportlab",
]